libs/grammar/src/generated/cs/MemoryMachineAssemblyParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

#pragma warning disable 3021
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class MemoryMachineAssemblyParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		IDENTIFIER=1, NUMBER=2, COLON=3, EQUALS=4, ASTERISK=5, LBRACKET=6, RBRACKET=7, 
		WS=8, COMMENT=9, NEWLINE=10;
	public const int
		RULE_program = 0, RULE_line = 1, RULE_label_definition = 2, RULE_label = 3, 
		RULE_instruction = 4, RULE_argument = 5, RULE_comment = 6, RULE_direct = 7, 
		RULE_indirect = 8, RULE_immediate = 9, RULE_accessor = 10, RULE_index = 11;
	public static readonly string[] ruleNames = {
		"program", "line", "label_definition", "label", "instruction", "argument", 
		"comment", "direct", "indirect", "immediate", "accessor", "index"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, "':'", "'='", "'*'", "'['", "']'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "IDENTIFIER", "NUMBER", "COLON", "EQUALS", "ASTERISK", "LBRACKET", 
		"RBRACKET", "WS", "COMMENT", "NEWLINE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MemoryMachineAssembly.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static MemoryMachineAssemblyParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MemoryMachineAssemblyParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MemoryMachineAssemblyParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(MemoryMachineAssemblyParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NEWLINE() { return GetTokens(MemoryMachineAssemblyParser.NEWLINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE(int i) {
			return GetToken(MemoryMachineAssemblyParser.NEWLINE, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMemoryMachineAssemblyVisitor<TResult> typedVisitor = visitor as IMemoryMachineAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 24;
			line();
			State = 33;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 26;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					do {
						{
						{
						State = 25;
						Match(NEWLINE);
						}
						}
						State = 28;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					} while ( _la==NEWLINE );
					State = 30;
					line();
					}
					} 
				}
				State = 35;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			State = 39;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==NEWLINE) {
				{
				{
				State = 36;
				Match(NEWLINE);
				}
				}
				State = 41;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 42;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public InstructionContext instruction() {
			return GetRuleContext<InstructionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommentContext comment() {
			return GetRuleContext<CommentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Label_definitionContext label_definition() {
			return GetRuleContext<Label_definitionContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMemoryMachineAssemblyVisitor<TResult> typedVisitor = visitor as IMemoryMachineAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 2, RULE_line);
		int _la;
		try {
			State = 50;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 44;
				instruction();
				State = 46;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==COMMENT) {
					{
					State = 45;
					comment();
					}
				}

				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 48;
				label_definition();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 49;
				comment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Label_definitionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(MemoryMachineAssemblyParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(MemoryMachineAssemblyParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public InstructionContext instruction() {
			return GetRuleContext<InstructionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(MemoryMachineAssemblyParser.NEWLINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CommentContext comment() {
			return GetRuleContext<CommentContext>(0);
		}
		public Label_definitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_label_definition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.EnterLabel_definition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.ExitLabel_definition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMemoryMachineAssemblyVisitor<TResult> typedVisitor = visitor as IMemoryMachineAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLabel_definition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Label_definitionContext label_definition() {
		Label_definitionContext _localctx = new Label_definitionContext(Context, State);
		EnterRule(_localctx, 4, RULE_label_definition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52;
			Match(IDENTIFIER);
			State = 53;
			Match(COLON);
			State = 55;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==NEWLINE) {
				{
				State = 54;
				Match(NEWLINE);
				}
			}

			State = 57;
			instruction();
			State = 59;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COMMENT) {
				{
				State = 58;
				comment();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LabelContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(MemoryMachineAssemblyParser.IDENTIFIER, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_label; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.EnterLabel(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.ExitLabel(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMemoryMachineAssemblyVisitor<TResult> typedVisitor = visitor as IMemoryMachineAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLabel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LabelContext label() {
		LabelContext _localctx = new LabelContext(Context, State);
		EnterRule(_localctx, 6, RULE_label);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 61;
			Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstructionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(MemoryMachineAssemblyParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ArgumentContext argument() {
			return GetRuleContext<ArgumentContext>(0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instruction; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.EnterInstruction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.ExitInstruction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMemoryMachineAssemblyVisitor<TResult> typedVisitor = visitor as IMemoryMachineAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstruction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstructionContext instruction() {
		InstructionContext _localctx = new InstructionContext(Context, State);
		EnterRule(_localctx, 8, RULE_instruction);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 63;
			Match(IDENTIFIER);
			State = 65;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 54L) != 0)) {
				{
				State = 64;
				argument();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArgumentContext : ParserRuleContext {
		public ArgumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_argument; } }
	 
		public ArgumentContext() { }
		public virtual void CopyFrom(ArgumentContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class NumberOperandContext : ArgumentContext {
		[System.Diagnostics.DebuggerNonUserCode] public DirectContext direct() {
			return GetRuleContext<DirectContext>(0);
		}
		public NumberOperandContext(ArgumentContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.EnterNumberOperand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.ExitNumberOperand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMemoryMachineAssemblyVisitor<TResult> typedVisitor = visitor as IMemoryMachineAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumberOperand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IndirectOperandContext : ArgumentContext {
		[System.Diagnostics.DebuggerNonUserCode] public IndirectContext indirect() {
			return GetRuleContext<IndirectContext>(0);
		}
		public IndirectOperandContext(ArgumentContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.EnterIndirectOperand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.ExitIndirectOperand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMemoryMachineAssemblyVisitor<TResult> typedVisitor = visitor as IMemoryMachineAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIndirectOperand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ImmediateOperandContext : ArgumentContext {
		[System.Diagnostics.DebuggerNonUserCode] public ImmediateContext immediate() {
			return GetRuleContext<ImmediateContext>(0);
		}
		public ImmediateOperandContext(ArgumentContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.EnterImmediateOperand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.ExitImmediateOperand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMemoryMachineAssemblyVisitor<TResult> typedVisitor = visitor as IMemoryMachineAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImmediateOperand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LabelOperandContext : ArgumentContext {
		[System.Diagnostics.DebuggerNonUserCode] public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		public LabelOperandContext(ArgumentContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.EnterLabelOperand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.ExitLabelOperand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMemoryMachineAssemblyVisitor<TResult> typedVisitor = visitor as IMemoryMachineAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLabelOperand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArgumentContext argument() {
		ArgumentContext _localctx = new ArgumentContext(Context, State);
		EnterRule(_localctx, 10, RULE_argument);
		try {
			State = 71;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NUMBER:
				_localctx = new NumberOperandContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 67;
				direct();
				}
				break;
			case ASTERISK:
				_localctx = new IndirectOperandContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 68;
				indirect();
				}
				break;
			case EQUALS:
				_localctx = new ImmediateOperandContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 69;
				immediate();
				}
				break;
			case IDENTIFIER:
				_localctx = new LabelOperandContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 70;
				label();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMENT() { return GetToken(MemoryMachineAssemblyParser.COMMENT, 0); }
		public CommentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comment; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.EnterComment(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.ExitComment(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMemoryMachineAssemblyVisitor<TResult> typedVisitor = visitor as IMemoryMachineAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommentContext comment() {
		CommentContext _localctx = new CommentContext(Context, State);
		EnterRule(_localctx, 12, RULE_comment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 73;
			Match(COMMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DirectContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER() { return GetToken(MemoryMachineAssemblyParser.NUMBER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AccessorContext accessor() {
			return GetRuleContext<AccessorContext>(0);
		}
		public DirectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_direct; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.EnterDirect(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.ExitDirect(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMemoryMachineAssemblyVisitor<TResult> typedVisitor = visitor as IMemoryMachineAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDirect(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DirectContext direct() {
		DirectContext _localctx = new DirectContext(Context, State);
		EnterRule(_localctx, 14, RULE_direct);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75;
			Match(NUMBER);
			State = 77;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LBRACKET) {
				{
				State = 76;
				accessor();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IndirectContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASTERISK() { return GetToken(MemoryMachineAssemblyParser.ASTERISK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER() { return GetToken(MemoryMachineAssemblyParser.NUMBER, 0); }
		public IndirectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_indirect; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.EnterIndirect(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.ExitIndirect(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMemoryMachineAssemblyVisitor<TResult> typedVisitor = visitor as IMemoryMachineAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIndirect(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IndirectContext indirect() {
		IndirectContext _localctx = new IndirectContext(Context, State);
		EnterRule(_localctx, 16, RULE_indirect);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			Match(ASTERISK);
			State = 80;
			Match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImmediateContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(MemoryMachineAssemblyParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER() { return GetToken(MemoryMachineAssemblyParser.NUMBER, 0); }
		public ImmediateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_immediate; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.EnterImmediate(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.ExitImmediate(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMemoryMachineAssemblyVisitor<TResult> typedVisitor = visitor as IMemoryMachineAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImmediate(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ImmediateContext immediate() {
		ImmediateContext _localctx = new ImmediateContext(Context, State);
		EnterRule(_localctx, 18, RULE_immediate);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82;
			Match(EQUALS);
			State = 83;
			Match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AccessorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACKET() { return GetToken(MemoryMachineAssemblyParser.LBRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IndexContext index() {
			return GetRuleContext<IndexContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACKET() { return GetToken(MemoryMachineAssemblyParser.RBRACKET, 0); }
		public AccessorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_accessor; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.EnterAccessor(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMemoryMachineAssemblyListener typedListener = listener as IMemoryMachineAssemblyListener;
			if (typedListener != null) typedListener.ExitAccessor(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMemoryMachineAssemblyVisitor<TResult> typedVisitor = visitor as IMemoryMachineAssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAccessor(this);
			else return visitor.VisitChildren(this);
		}
	}
